testsuite/tests/properties/invalid_call/no_such_prop.lkt
import common

class BarNode: FooNode {
    @export fun bar_prop(): Int = node.no_such_prop(12)
}
